@@ -9,6 +9,12 @@ Changes in @NEW@:
     * Fixed resolveLevel 2 so that it does not repeatedly try to perform 
       the same update. (CNY-887)
     * cvc cook | less now leaves less in control of the terminal. (CNY-802)
+    * Conary update now respects local changes when a group update occurs
+      along with the update of the switched trove.  For example, switch
+      foo to be installed from another branch instead of the default, 
+      and then update foo and its containing group at the same time would
+      cause conary to try to reinstall the original foo (resulting in path
+      conflicts). (CNY-915)
 
 Changes in 1.0.31:
   o Client Changes:
